staging/bases/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-demo-backend-service
spec:
  gateways:
  - default-gateway.istio-system.svc.cluster.local
  # hosts:
  # - java-demo-backend-service

  http:
  - match:
    - uri:
        prefix: /api/v1

    route:
    - destination:
        host: java-demo-backend-service
        port:
          number: 8080
